# VaultMind

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  PROJECT_LOG.md  README.md  cli.py  docker-compose.cuda.yml  docker-compose.yml  formatter.py  indexing.py  inference.py  ingestion.py  pyproject.toml  requirements.txt  ruff.toml  run.sh  server.py  setup_env.sh
.github/workflows/: ci.yml
scratch/: create_workspaces.py  test_db.py  test_inference.py
sdk/: README.md  pyproject.toml
sdk/vaultmind/: __init__.py  client.py
templates/: index.html
tests/: stress_test.py  test_formatter.py  test_indexing.py  test_ingestion.py  test_simple.py  test_workspaces.py
