[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vaultmind-client"
version = "0.1.0"
description = "Python SDK for VaultMind — local RAG system with Knowledge Graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "VaultMind Contributors"}]
keywords = ["rag", "llm", "vaultmind", "sdk", "client"]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/Gekvhm/VaultMind"
Repository = "https://github.com/Gekvhm/VaultMind"
